feat: API to save external links as attachments
